# apache-beam-examples

./: .flake8  .markdownlint.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/pipelines/custom_transform_example/: pipeline.py
src/pipelines/dataframe_flight_example/: pipeline.py
src/pipelines/dataframe_taxi_example/: pipeline.py
src/pipelines/multiple_output_pardo/: pipeline.py
src/pipelines/pubsub_example/: pipeline.py
src/pipelines/pytorch_example/: pipeline.py
src/pipelines/side_input_example/: pipeline.py
src/pipelines/simple_batch_example/: pipeline.py
src/pipelines/simple_stream_example/: pipeline.py
src/pipelines/sklearn_example/: pipeline.py
src/pipelines/window_example/: pipeline.py
src/pipelines/wordcount/: pipeline.py
tests/dataframe_taxi_example/: pipeline_it_test.py  pipeline_test.py  sample_rides.csv  sample_zone.csv
tests/multiple_output_pardo_example/: pipeline_test.py
tests/side_input_example/: pipeline_test.py
tests/wordcount/: pipeline_test.py
